syntax = "proto3";

message ClipboardNotify {
    repeated string targets = 1;
}

message ClipboardGetContent {
    string target = 1;
}

message ClipboardGetContentReply {
    string target = 1;
    bytes content = 2;
}
